<!--
  ~ Copyright (C) 2018 Adin Kwok (adinkwok)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/play_game_single"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/play_button_single" />

        <Button
            android:id="@+id/unlock_more_stuff"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/play_button_double" />

        <Button
            android:id="@+id/launch_website"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/website_button" />

        <TextView
            android:id="@+id/fastest_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fastest_score_text"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/fastest_score_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fastest_score_show"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/fastest_score_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fastest_score_show"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:id="@+id/fastest_score_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/fastest_score_show"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/sound"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/volume"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_sound_on" />

        <ImageButton
            android:id="@+id/vibrate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/vibrate"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_vibrate_on" />

        <ImageButton
            android:id="@+id/night_mode"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/night_mode"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_night_mode" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>