<!--
  ~ Copyright (C) 2018 Adin Kwok (adinkwok)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.SingleGraphActivity">

    <LinearLayout
        android:id="@+id/graph_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:rotation="180">

            <TextView
                android:id="@+id/double_graph_message_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="80dp"
                android:text="@string/end_message_winner"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/double_graph_layout_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/double_graph_image_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="46dp"
                    android:layout_marginStart="46dp"
                    android:contentDescription="@string/graph_average_rate"
                    android:src="@drawable/loser" />

                <TextView
                    android:id="@+id/double_graph_time_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_total_time"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/double_graph_avg_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_average_rate"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/double_graph_fast_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_double_fastest"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/double_graph_slow_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_double_slowest"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/double_graph_play_again_top"
                        android:layout_width="108dp"
                        android:layout_height="46dp"
                        android:layout_marginEnd="20dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/play_again"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/double_graph_back_to_menu_top"
                        android:layout_width="108dp"
                        android:layout_height="46dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/graph_back_button"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/double_graph_message_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="46dp"
                android:text="@string/end_message_loser"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/double_graph_layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/double_graph_image_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="46dp"
                    android:layout_marginStart="46dp"
                    android:contentDescription="@string/graph_average_rate"
                    android:src="@drawable/big_win" />

                <TextView
                    android:id="@+id/double_graph_time_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_total_time"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/double_graph_avg_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_average_rate"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/double_graph_fast_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_double_fastest"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/double_graph_slow_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graph_double_slowest"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/double_graph_play_again_bottom"
                        android:layout_width="108dp"
                        android:layout_height="46dp"
                        android:layout_marginEnd="20dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/play_again"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/double_graph_back_to_menu_bottom"
                        android:layout_width="108dp"
                        android:layout_height="46dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/graph_back_button"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
