<!--
  ~ Copyright (C) 2018 Adin Kwok (adinkwok)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.SingleGraphActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/graph_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_message_wow"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/graph_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/stats_image"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:contentDescription="@string/graph_horizontal_title"
            android:scaleType="centerInside"
            android:src="@drawable/stats" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/avg_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="35dp"
            android:layout_weight="1"
            app:seriesColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/graph_horizontal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/graph_horizontal_title"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play_game_graph"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/play_button_single" />

            <Button
                android:id="@+id/back_to_menu"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/graph_back_button" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
